# diffusion_prompt_upsampling

./: README.md  generate_and_validate.ipynb  pyproject.toml
diffusion_prompt_upsampling/: diffusion_model.py  dspy_multi_modal.py  judge_model.py  utils.py
notebooks/: generate_and_validate.ipynb  prompt_upsampling_explained.ipynb
scripts/: evaluate_upsampling.py  generate_and_validate.py  publish_drawbench.py  publish_parti_prompts.py
